monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: daniscarpa-monitoring-lb
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "monitoring-ip"
spec:
  rules:
  - host: prometheus.daniscarpa.com
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
